[package]
name = "lcod-kernel-rs"
build = "build.rs"
version = "0.1.21"
edition = "2021"
license = "MIT"
description = "LCOD kernel reference implementation in Rust"

[features]
default = []
chrono = []
bigint = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
humantime = "2"
hex = "0.4"
quick-js = "0.4"
sha2 = "0.10"
csv = "1.3"
toml = "0.8"
libquickjs-sys = "0.9"
git2 = { version = "0.18", default-features = false, features = ["https", "ssh", "ssh_key_from_memory", "vendored-libgit2", "vendored-openssl"] }
curl = "0.4"
percent-encoding = "2"
url = "=2.4.1"
tempfile = "3"
tiny_http = "0.12"
ctrlc = "3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
flate2 = "1"
tar = "0.4"
ureq = { version = "2", features = ["gzip", "json"] }

[dev-dependencies]
ureq = "2"
